--- a/app/src/main/res/layout/bank_branch_detail.xml
+++ b/app/src/main/res/layout/bank_branch_detail.xml
@@ -42,6 +42,7 @@
                         android:orientation="horizontal">
 
                     <ImageView
+                            android:id="@+id/back_press_iv"
                             android:layout_margin="5dp"
                             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                             android:layout_width="90dp"
@@ -49,6 +50,7 @@
                             android:layout_weight="1"/>
 
                     <TextView
+                            android:id="@+id/branch_title_tv"
                             android:layout_margin="15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
