--- a/app/src/main/res/layout/branch_detail.xml
+++ b/app/src/main/res/layout/branch_detail.xml
@@ -6,14 +6,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DetailsActivity">
+        tools:context=".ui.activities.BranchDetailsActivity">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".ui.detail.BankDetailActivity"
+                tools:context=".ui.activities.BranchDetailsActivity"
                 android:fillViewport="true">
 
         <android.support.constraint.ConstraintLayout
@@ -50,7 +50,7 @@
                             android:layout_weight="1"/>
 
                     <TextView
-                            android:id="@+id/branch_title_tv"
+                            android:id="@+id/title"
                             android:layout_margin="15dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
