--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,7 +14,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.map.BankLocation">
+            tools:context=".ui.activities.MapsActivity">
 
         <fragment
                 xmlns:tools="http://schemas.android.com/tools"
