--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,7 +6,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.MapsActivity">
+        tools:context=".ui.activities.MapsActivity"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,4 +25,7 @@
                 android:layout_height="match_parent"/>
 
     </LinearLayout>
+
+    <include layout="@layout/bank_list_items"/>
+
 </android.support.v4.widget.SwipeRefreshLayout>
