--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefresh"
+<android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.MapsActivity"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        tools:context=".ui.activities.MapsActivity">
 
-    <LinearLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -24,8 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-    </LinearLayout>
-
-    <include layout="@layout/bank_list_items"/>
-
 </android.support.v4.widget.SwipeRefreshLayout>
+
+    <include layout="@layout/bank_list"/>
+
+</android.support.design.widget.CoordinatorLayout>
