--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -1,19 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
-            android:id="@+id/bottom_sheet"
+<android.support.constraint.ConstraintLayout
+        android:id="@+id/bottom_sheet"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#DCDCDC"
+        app:behavior_peekHeight="20dp"
+        app:behavior_hideable="true"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+<android.support.constraint.ConstraintLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:behavior_peekHeight="20dp"
-            app:behavior_hideable="true"
-            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
-
-    <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
         <android.support.v7.widget.CardView
                 app:cardCornerRadius="40dp"
@@ -29,7 +40,7 @@
                 android:id="@+id/cardView">
 
             <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="376dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
@@ -41,7 +52,6 @@
                         android:layout_weight="1"/>
 
                 <TextView
-                        android:id="@+id/search_title"
                         android:layout_margin="15dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -52,18 +62,20 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+        <android.support.v7.widget.RecyclerView
+                android:scrollbarAlwaysDrawVerticalTrack="true"
+                android:id="@+id/branch_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="725dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.0"/>
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/branch_recyclerview"
-            android:layout_width="387dp"
-            android:layout_height="636dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
 
     </android.support.constraint.ConstraintLayout>
-    </LinearLayout>
+</ScrollView>
+</android.support.constraint.ConstraintLayout>
