--- a/app/src/main/res/layout/bank_list_item.xml
+++ b/app/src/main/res/layout/bank_list_item.xml
@@ -3,8 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        android:layout_height="wrap_content">
 
     <TextView
             android:text="Branch"
@@ -100,16 +99,18 @@
             android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_bias="0.0"/>
 
+
     <ImageView
-            android:layout_marginRight="3dp"
-            android:layout_marginLeft="3dp"
             android:layout_width="match_parent"
-            android:layout_height="5dp" app:srcCompat="@drawable/line_shape"
+            android:layout_height="5dp"
+            app:srcCompat="@drawable/line_shape"
             android:id="@+id/imageView23"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" android:scaleType="center"
-            android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/time"
-            android:layout_marginTop="12dp"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            android:scaleType="center"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/time"/>
 
 </android.support.constraint.ConstraintLayout>
