--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -5,8 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#DCDCDC"
-        app:behavior_peekHeight="20dp"
+        android:background="#fff"
+        app:behavior_peekHeight="80dp"
         app:behavior_hideable="true"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
@@ -25,43 +25,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-        <android.support.v7.widget.CardView
-                app:cardCornerRadius="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="MissingConstraints"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/cardView">
-
-            <LinearLayout
-                    android:layout_width="376dp"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                <ImageView
-                        android:layout_margin="5dp"
-                        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
-                        android:layout_width="90dp"
-                        android:layout_height="46dp"
-                        android:layout_weight="1"/>
-
-                <TextView
-                        android:layout_margin="15dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="san"
-                        android:textColor="#111010"
-                        android:textSize="20sp"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
         <android.support.v7.widget.RecyclerView
                 android:scrollbarAlwaysDrawVerticalTrack="true"
                 android:id="@+id/branch_recyclerview"
