--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#0054A6</color>
     <color name="colorPrimaryDark">#0054A6</color>
     <color name="colorAccent">#0054A6</color>
+    <color name="atm_color">#ec1c24</color>
+    <color name="branch_color">#0054a6</color>
+    <color name="merchant_color">#309627</color>
+    <color name="agent_color">#eec90f</color>
 </resources>
