--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -1,44 +1,35 @@
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         android:id="@+id/bottom_sheet"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#fff"
-        app:behavior_peekHeight="80dp"
+        app:behavior_peekHeight="100dp"
         app:behavior_hideable="true"
+        android:orientation="vertical"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
 <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-<android.support.constraint.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
+                android:nestedScrollingEnabled="false"
                 android:scrollbarAlwaysDrawVerticalTrack="true"
-                android:id="@+id/branch_recyclerview"
+                android:id="@+id/bank_recyclerview"
                 android:layout_width="match_parent"
-                android:layout_height="725dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/cardView"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintHorizontal_bias="0.0"/>
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
