--- a/app/src/main/res/layout/bank_list_item.xml
+++ b/app/src/main/res/layout/bank_list_item.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <TextView
             android:text="Name"
@@ -11,7 +12,7 @@
             android:textStyle="bold"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:id="@+id/branch_name"
+            android:id="@+id/bank_name"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,11 +23,11 @@
             android:text="Address"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/branch_address"
-            app:layout_constraintTop_toBottomOf="@+id/branch_name"
-            app:layout_constraintStart_toStartOf="@+id/branch_name"
+            android:id="@+id/bank_address"
+            app:layout_constraintTop_toBottomOf="@+id/bank_name"
+            app:layout_constraintStart_toStartOf="@+id/bank_name"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/branch_name"
+            app:layout_constraintEnd_toEndOf="@+id/bank_name"
             app:layout_constraintHorizontal_bias="0.0"/>
     <ImageView
             android:layout_width="40dp"
@@ -38,7 +39,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.992"
-            app:layout_constraintTop_toBottomOf="@+id/branch_name"/>
+            app:layout_constraintTop_toBottomOf="@+id/bank_name"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,9 +83,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/time"
-            app:layout_constraintTop_toBottomOf="@+id/branch_address"
-            app:layout_constraintStart_toStartOf="@+id/branch_address"
-            app:layout_constraintEnd_toEndOf="@+id/branch_address"
+            app:layout_constraintTop_toBottomOf="@+id/bank_address"
+            app:layout_constraintStart_toStartOf="@+id/bank_address"
+            app:layout_constraintEnd_toEndOf="@+id/bank_address"
             android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_bias="0.0"/>
 
