--- a/app/src/main/res/layout/bank_list.xml
+++ b/app/src/main/res/layout/bank_list.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-<ScrollView
+<android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
@@ -31,5 +31,5 @@
 
 
     </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.NestedScrollView>
 </LinearLayout>
