--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,61 +42,76 @@
                     android:layout_marginTop="4dp"
                     app:layout_constraintVertical_bias="0.01"/>
 
-            <android.support.constraint.ConstraintLayout
+            <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/map_fragment"
-                    app:layout_constraintVertical_bias="0.8"
-                    app:layout_constraintStart_toStartOf="@+id/map_fragment"
-                    app:layout_constraintEnd_toEndOf="@+id/map_fragment" android:layout_marginBottom="16dp">
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintVertical_bias="0.793"
+                    android:fillViewport="true">
 
-                <Button
-                        android:layout_width="105dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/button_shape"
-                        android:text="BRANCH"
-                        android:drawableLeft="@drawable/ic_branch_24dp"
-                        android:id="@+id/branch_btn"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/atm_btn"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/atm_btn"/>
+                <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="@+id/map_fragment"
+                        app:layout_constraintVertical_bias="0.8"
+                        app:layout_constraintStart_toStartOf="@+id/map_fragment"
+                        app:layout_constraintEnd_toEndOf="@+id/map_fragment" android:layout_marginBottom="16dp">
 
-                <Button
-                        android:layout_width="79dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/button_shape"
-                        android:text="ATM"
-                        android:drawableLeft="@drawable/ic_atm_24dp"
-                        android:id="@+id/atm_btn"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/agent_btn"
-                        app:layout_constraintStart_toEndOf="@+id/branch_btn"
-                        app:layout_constraintEnd_toStartOf="@+id/agent_btn"/>
+                    <Button
+                            android:layout_width="105dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/button_shape"
+                            android:text="BRANCH"
+                            android:drawableLeft="@drawable/ic_branch_24dp"
+                            android:id="@+id/branch_btn"
+                            app:layout_constraintBaseline_toBaselineOf="@+id/atm_btn"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/atm_btn" android:layout_marginStart="8dp"/>
 
-                <Button
-                        android:layout_width="95dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/button_shape"
-                        android:text="AGENT"
-                        android:drawableLeft="@drawable/ic_agent_24dp"
-                        android:id="@+id/agent_btn"
-                        app:layout_constraintBaseline_toBaselineOf="@+id/merchant_btn"
-                        app:layout_constraintTop_toTopOf="@+id/atm_btn"
-                        app:layout_constraintStart_toEndOf="@+id/atm_btn"
-                        app:layout_constraintEnd_toStartOf="@+id/merchant_btn"/>
+                    <Button
+                            android:layout_width="79dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/button_shape"
+                            android:text="ATM"
+                            android:drawableLeft="@drawable/ic_atm_24dp"
+                            android:id="@+id/atm_btn"
+                            app:layout_constraintBaseline_toBaselineOf="@+id/agent_btn"
+                            app:layout_constraintStart_toEndOf="@+id/branch_btn"
+                            app:layout_constraintEnd_toStartOf="@+id/agent_btn" android:layout_marginStart="8dp"/>
 
-                <Button
-                        android:layout_width="125dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/button_shape"
-                        android:text="MERCHANT"
-                        android:drawableLeft="@drawable/ic_merchant_24dp"
-                        android:id="@+id/merchant_btn"
-                        app:layout_constraintTop_toTopOf="@+id/agent_btn"
-                        app:layout_constraintStart_toEndOf="@+id/agent_btn" app:layout_constraintEnd_toEndOf="parent"/>
+                    <Button
+                            android:layout_width="95dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/button_shape"
+                            android:text="AGENT"
+                            android:drawableLeft="@drawable/ic_agent_24dp"
+                            android:id="@+id/agent_btn"
+                            app:layout_constraintBaseline_toBaselineOf="@+id/merchant_btn"
+                            app:layout_constraintTop_toTopOf="@+id/atm_btn"
+                            app:layout_constraintStart_toEndOf="@+id/atm_btn"
+                            app:layout_constraintEnd_toStartOf="@+id/merchant_btn" android:layout_marginTop="324dp"
+                            android:layout_marginStart="8dp"/>
 
-            </android.support.constraint.ConstraintLayout>
+                    <Button
+                            android:layout_width="125dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/button_shape"
+                            android:text="MERCHANT"
+                            android:drawableLeft="@drawable/ic_merchant_24dp"
+                            android:id="@+id/merchant_btn"
+                            app:layout_constraintTop_toTopOf="@+id/agent_btn"
+                            app:layout_constraintStart_toEndOf="@+id/agent_btn"
+                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="368dp"
+                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.084"
+                            android:layout_marginStart="8dp"/>
+                </android.support.constraint.ConstraintLayout>
+            </HorizontalScrollView>
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 
