--- a/app/src/main/res/layout/branch_list_item.xml
+++ b/app/src/main/res/layout/branch_list_item.xml
@@ -12,7 +12,7 @@
             android:textStyle="bold"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:id="@+id/bank_name"
+            android:id="@+id/atm_name"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -23,45 +23,45 @@
             android:text="Address"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:id="@+id/bank_address"
-            app:layout_constraintTop_toBottomOf="@+id/bank_name"
-            app:layout_constraintStart_toStartOf="@+id/bank_name"
+            android:id="@+id/atm_address"
+            app:layout_constraintTop_toBottomOf="@+id/atm_name"
+            app:layout_constraintStart_toStartOf="@+id/atm_name"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/bank_name"
+            app:layout_constraintEnd_toEndOf="@+id/atm_name"
             app:layout_constraintHorizontal_bias="0.0"/>
     <ImageView
             android:layout_width="40dp"
             android:layout_height="52dp"
             app:srcCompat="@drawable/ic_call_black_24dp"
-            android:id="@+id/imageView3"
+            android:id="@+id/call_iv"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="72dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.992"
-            app:layout_constraintTop_toBottomOf="@+id/bank_name"/>
+            app:layout_constraintTop_toBottomOf="@+id/atm_name"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="CALL"
             android:textColor="#0054A6"
             android:id="@+id/textView15"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="@+id/imageView3"
-            app:layout_constraintEnd_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/call_iv"
+            app:layout_constraintStart_toStartOf="@+id/call_iv"
+            app:layout_constraintEnd_toEndOf="@+id/call_iv"
             app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="4dp"/>
     <ImageView
             android:layout_width="40dp"
             android:layout_height="52dp"
             app:srcCompat="@drawable/ic_directions_black_24dp"
-            android:id="@+id/imageView4"
+            android:id="@+id/direction_iv"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.976"
-            app:layout_constraintTop_toTopOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="@+id/call_iv"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
             app:layout_constraintVertical_bias="0.0"/>
@@ -71,9 +71,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView16"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4"
-            app:layout_constraintStart_toStartOf="@+id/imageView4"
-            app:layout_constraintEnd_toEndOf="@+id/imageView4"
+            app:layout_constraintTop_toBottomOf="@+id/direction_iv"
+            app:layout_constraintStart_toStartOf="@+id/direction_iv"
+            app:layout_constraintEnd_toEndOf="@+id/direction_iv"
             app:layout_constraintHorizontal_bias="0.612"
             android:layout_marginTop="4dp"/>
     <TextView
@@ -83,9 +83,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/time"
-            app:layout_constraintTop_toBottomOf="@+id/bank_address"
-            app:layout_constraintStart_toStartOf="@+id/bank_address"
-            app:layout_constraintEnd_toEndOf="@+id/bank_address"
+            app:layout_constraintTop_toBottomOf="@+id/atm_address"
+            app:layout_constraintStart_toStartOf="@+id/atm_address"
+            app:layout_constraintEnd_toEndOf="@+id/atm_address"
             android:layout_marginTop="4dp"
             app:layout_constraintHorizontal_bias="0.0"/>
 
