--- a/app/src/main/res/drawable/selected_button_shape.xml
+++ b/app/src/main/res/drawable/selected_button_shape.xml
@@ -14,8 +14,8 @@
                     android:topRightRadius="5dp"/>
 
             <stroke
-                    android:width="1dp"
-                    android:color="#86868D" />
+                    android:width="2dp"
+                    android:color="#fff" />
 
             <solid android:color="@color/branch_color" />
 
