--- a/app/src/main/res/layout/branch_detail.xml
+++ b/app/src/main/res/layout/branch_detail.xml
@@ -106,7 +106,7 @@
                     android:text="NO(65), LANMADAW ST, NO(2)QTR, PAREIK, KHAYAR QTR, SIN HPYU KYUN"
                     android:layout_width="290dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/atm_address"
+                    android:id="@+id/agent_address"
                     app:layout_constraintStart_toEndOf="@+id/imageView7"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="20dp"
@@ -127,7 +127,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView4"
-                    app:layout_constraintTop_toBottomOf="@+id/atm_address"
+                    app:layout_constraintTop_toBottomOf="@+id/agent_address"
                     android:layout_marginTop="12dp"
                     app:layout_constraintStart_toEndOf="@+id/imageView8"
                     android:layout_marginStart="8dp"
