--- a/app/src/main/res/layout/agent_list_item.xml
+++ b/app/src/main/res/layout/agent_list_item.xml
@@ -54,18 +54,6 @@
             app:layout_constraintEnd_toEndOf="@+id/direction_iv"
             app:layout_constraintHorizontal_bias="0.612"
             android:layout_marginTop="4dp"/>
-    <TextView
-            android:text="9:00 AM - 3:00 PM"
-            android:textColor="#13FC1C"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/time"
-            app:layout_constraintTop_toBottomOf="@+id/agent_address"
-            app:layout_constraintStart_toStartOf="@+id/agent_address"
-            app:layout_constraintEnd_toEndOf="@+id/agent_address"
-            android:layout_marginTop="4dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
 
 
     <ImageView
@@ -79,7 +67,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             android:scaleType="center"
             android:layout_marginEnd="8dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/time"/>
+            app:layout_constraintTop_toBottomOf="@+id/direction_iv" android:layout_marginTop="20dp"/>
 
 </android.support.constraint.ConstraintLayout>
