--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -140,7 +140,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/cardView"
                     android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toTopOf="@+id/textView3"
-                    app:layout_constraintVertical_bias="0.0" android:layout_marginTop="5dp"/>
+                    app:layout_constraintVertical_bias="0.0" android:layout_marginTop="16dp"/>
 
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -411,13 +411,18 @@
                     android:text="Version 2.1.0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
                     android:textColor="#C09C9C"
                     android:textSize="15sp"
-                    android:id="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                    android:id="@+id/textView11"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="25dp"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginBottom="16dp"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="25dp"
+                    app:layout_constraintTop_toBottomOf="@+id/imageView4"
+                    android:layout_marginBottom="16dp"/>
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
