--- a/app/src/main/res/layout/currency_list_item.xml
+++ b/app/src/main/res/layout/currency_list_item.xml
@@ -22,14 +22,15 @@
     <TextView
             android:text="TextView"
             android:maxLines="3"
+            android:ellipsize="end"
             android:layout_width="210dp"
-            android:layout_height="70dp"
+            android:layout_height="wrap_content"
             android:id="@+id/service_desc_tv"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.058"
+            android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.058"
             app:layout_constraintTop_toBottomOf="@+id/service_title_tv" android:layout_marginTop="8dp"/>
     <TextView
             android:text="learn more"
@@ -41,7 +42,8 @@
             app:layout_constraintStart_toStartOf="@+id/service_desc_tv"
             app:layout_constraintEnd_toEndOf="@+id/service_desc_tv"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.012"
+            android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
             android:layout_width="230dp"
@@ -51,9 +53,9 @@
             android:textColor="#000"
             app:layout_constraintTop_toTopOf="@+id/service_iv"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.063"
-            android:layout_marginTop="8dp"/>
+            app:layout_constraintHorizontal_bias="0.058"
+            android:layout_marginTop="32dp"/>
 </android.support.constraint.ConstraintLayout>
