--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -12,13 +12,13 @@
             android:layout_height="match_parent"
             android:background="#fff">
         <ImageView
-                android:layout_width="229dp"
-                android:layout_height="226dp" app:srcCompat="@drawable/kbzconnect"
+                android:layout_width="150dp"
+                android:layout_height="150dp" app:srcCompat="@drawable/kbzconnect"
                 android:id="@+id/imageView2" android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent" android:scaleType="center"
+                app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
                 app:layout_constraintVertical_bias="0.366"/>
         <ProgressBar
                 style="@android:style/Widget.Material.ProgressBar.Horizontal"
@@ -51,8 +51,7 @@
                 android:id="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="@+id/imageView2" android:layout_marginEnd="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.577"/>
+                app:layout_constraintStart_toStartOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.411"/>
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
