adding collasping toolbar layout

--- a/app/src/main/res/layout/service_detail_webview.xml
+++ b/app/src/main/res/layout/service_detail_webview.xml
@@ -94,7 +94,7 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 android:id="@+id/service_detail_webview"/>
         <TextView
-                android:text="More Details about "
+                android:text="@string/link"
                 android:textColor="@color/branch_color"
                 android:textSize="15sp"
                 android:layout_width="match_parent"
