--- a/app/src/main/res/drawable/card_view_shape.xml
+++ b/app/src/main/res/drawable/card_view_shape.xml
@@ -5,14 +5,14 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:shape="rectangle">
 
-            <corners
+            <!--<corners
                     android:bottomLeftRadius="5dp"
                     android:bottomRightRadius="5dp"
                     android:color="#968585"
-                    android:radius="5dp"
+                    android:radius="0dp"
                     android:topLeftRadius="5dp"
                     android:topRightRadius="5dp"/>
-
+-->
             <stroke
                     android:width="2dp"
                     android:color="#968585" />
