modified app by adding collasping toolbar layout

--- a/app/src/main/res/layout/currency_list_item.xml
+++ b/app/src/main/res/layout/currency_list_item.xml
@@ -12,7 +12,8 @@
 
     <ImageView
             android:layout_width="150dp"
-            android:layout_height="150dp" app:srcCompat="@drawable/kbzconnect"
+            android:layout_height="150dp"
+            app:srcCompat="@drawable/kbzconnect"
             android:id="@+id/service_iv"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp"
@@ -23,19 +24,20 @@
             android:text="TextView"
             android:maxLines="3"
             android:ellipsize="end"
-            android:layout_width="210dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:id="@+id/service_desc_tv"
             android:textSize="15sp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="24dp" app:layout_constraintHorizontal_bias="0.058"
+            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.058"
             app:layout_constraintTop_toBottomOf="@+id/service_title_tv" android:layout_marginTop="8dp"/>
     <TextView
             android:text="learn more"
             android:layout_width="100dp"
             android:layout_height="22dp"
+            android:layout_marginRight="32dp"
             android:id="@+id/textView12"
             android:textColor="#0054A6"
             app:layout_constraintTop_toBottomOf="@+id/service_desc_tv"
@@ -46,14 +48,14 @@
             android:layout_marginTop="8dp"/>
     <TextView
             android:text="TextView"
-            android:layout_width="230dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:id="@+id/service_title_tv"
             android:textSize="20sp"
             android:textColor="#000"
             app:layout_constraintTop_toTopOf="@+id/service_iv"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/service_iv"
             android:layout_marginStart="8dp"
             app:layout_constraintHorizontal_bias="0.058"
