--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -5,9 +5,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.ServiceDetailActivity">
+        android:background="#fff"
+        tools:context=".ui.activities.ServiceDetailActivity" android:id="@+id/coordinatorLayout">
 
     <android.support.design.widget.AppBarLayout
+            android:background="#9C9696"
             android:id="@+id/app_bar"
             android:fitsSystemWindows="true"
             android:layout_height="@dimen/app_bar_height"
@@ -17,18 +19,19 @@
         <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
                 android:fitsSystemWindows="true"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                app:title="KBZPay"
                 app:toolbarId="@+id/toolbar"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                 app:contentScrim="?attr/colorPrimary"
-                app:title="MPU Card"
+                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                 app:collapsedTitleGravity="left">
 
             <ImageView
                     android:id="@+id/image_path"
-                    android:layout_width="150dp"
-                    android:layout_height="100dp"
+                    android:layout_width="250dp"
+                    android:layout_height="200dp"
                     app:layout_collapseMode="parallax"
                     android:src="@android:drawable/sym_def_app_icon"
                     android:layout_gravity="center"/>
@@ -51,6 +54,96 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_scrolling"/>
+    <android.support.v4.widget.NestedScrollView
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:id="@+id/nested"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
+
+
+        <android.support.constraint.ConstraintLayout
+                android:id="@+id/constraint"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <WebView
+                    android:nestedScrollingEnabled="false"
+                    android:id="@+id/service_detail_webview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintHorizontal_bias="0.75"/>
+
+            <TextView
+                    android:text="@string/link"
+                    android:textColor="@color/branch_color"
+                    android:textSize="15sp"
+                    android:autoLink="all"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/detail_tv"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/service_detail_webview"/>
+
+            <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/constraint2"
+                    android:background="@drawable/card_view_shape"
+                    android:orientation="horizontal"
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
+                    android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
+                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/detail_tv"
+                    app:layout_constraintVertical_bias="0.0">
+
+                <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="30dp"
+                        app:srcCompat="@drawable/ic_search_black_24dp"
+                        android:id="@+id/search"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginBottom="8dp"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView13"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_marginStart="68dp"
+                        app:layout_constraintVertical_bias="0.166"/>
+
+                <TextView
+                        android:text="Find your nearest exchange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20dp"
+                        android:textColor="#000"
+                        android:textSize="15sp"
+                        android:id="@+id/textView13"
+                        android:layout_marginEnd="8dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/search"
+                        android:layout_marginStart="8dp"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintVertical_bias="0.0"/>
+
+            </android.support.constraint.ConstraintLayout>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
