--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -19,7 +19,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintVertical_bias="1.0">
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -133,7 +134,7 @@
                     app:srcCompat="@drawable/ic_localization"
                     android:id="@+id/imageView3"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="32dp"
+                    android:layout_marginEnd="16dp"
                     app:layout_constraintStart_toEndOf="@+id/textView3"
                     android:layout_marginStart="8dp"
                     app:layout_constraintHorizontal_bias="0.942"
@@ -152,7 +153,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" android:layout_marginTop="50dp"
-                    android:layout_marginEnd="24dp" android:layout_marginStart="24dp">
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp">
 
                 <ImageView
                         android:layout_width="40dp"
@@ -192,14 +194,14 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="@+id/constraint2"
                     android:id="@+id/service_recycler"
-                    app:layout_constraintTop_toBottomOf="@+id/constraint2" android:layout_marginTop="40dp"
-                    app:layout_constraintStart_toStartOf="@+id/constraint2"
-            />
+                    app:layout_constraintTop_toBottomOf="@+id/constraint2"
+                    android:layout_marginTop="40dp"
+                    app:layout_constraintStart_toStartOf="@+id/constraint2" android:layout_marginStart="16dp"/>
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
-                    android:layout_width="100dp"
-                    android:layout_height="155dp"
+                    android:layout_width="120dp"
+                    android:layout_height="159dp"
                     android:id="@+id/constraintLayout2"
                     app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
                     app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
@@ -251,8 +253,8 @@
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
-                    android:layout_width="100dp"
-                    android:layout_height="155dp"
+                    android:layout_width="120dp"
+                    android:layout_height="159dp"
                     app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                     android:id="@+id/constraintLayout4"
@@ -303,11 +305,11 @@
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="76dp"
                     android:id="@+id/constraintLayout3"
                     app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="56dp" android:layout_marginTop="60dp">
+                    android:layout_marginEnd="16dp" android:layout_marginTop="60dp">
 
                 <TextView
                         android:text="Sell"
@@ -327,13 +329,13 @@
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
-                    android:layout_width="100dp"
-                    android:layout_height="155dp"
+                    android:layout_width="120dp"
+                    android:layout_height="159dp"
                     app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                     app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
                     android:id="@+id/constraintLayout5"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
-                    app:layout_constraintHorizontal_bias="1.0">
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0" android:layout_marginStart="16dp">
 
                 <TextView
                         android:text="USD"
@@ -379,7 +381,7 @@
             </android.support.constraint.ConstraintLayout>
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="76dp"
                     app:layout_constraintBottom_toTopOf="@+id/constraintLayout4" android:layout_marginStart="116dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
@@ -400,13 +402,15 @@
                         app:layout_constraintBottom_toBottomOf="parent"/>
             </android.support.constraint.ConstraintLayout>
             <ImageView
-                    android:layout_width="302dp"
-                    android:layout_height="70dp" app:srcCompat="@drawable/kbz_logo"
-                    android:id="@+id/imageView4" android:layout_marginTop="40dp"
-                    app:layout_constraintTop_toBottomOf="@+id/service_recycler"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    app:srcCompat="@drawable/kbz_logo"
+                    android:id="@+id/imageView4"
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    app:layout_constraintHorizontal_bias="0.494"/>
+                    app:layout_constraintHorizontal_bias="0.494"
+                    tools:ignore="MissingConstraints" android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@+id/service_recycler"/>
             <TextView
                     android:text="Version 2.1.0"
                     android:layout_width="wrap_content"
