--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0054A6</color>
-    <color name="colorPrimaryDark">#0054A6</color>
+    <color name="colorPrimaryDark">#024488</color>
     <color name="colorAccent">#0054A6</color>
     <color name="atm_color">#ec1c24</color>
     <color name="branch_color">#0054a6</color>
