modified add by adding search activity

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -77,11 +77,10 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintHorizontal_bias="0.75"/>
+                    app:layout_constraintHorizontal_bias="0.75" android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"/>
 
             <TextView
                     android:text="@string/link"
@@ -89,7 +88,7 @@
                     android:textSize="15sp"
                     android:autoLink="all"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="60dp"
                     android:id="@+id/detail_tv"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="16dp"
