--- a/app/src/main/res/layout/agent_list_item.xml
+++ b/app/src/main/res/layout/agent_list_item.xml
@@ -13,7 +13,7 @@
             android:textStyle="bold"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:id="@+id/merchant_name"
+            android:id="@+id/name"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,10 +25,10 @@
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:id="@+id/address_tv"
-            app:layout_constraintTop_toBottomOf="@+id/merchant_name"
-            app:layout_constraintStart_toStartOf="@+id/merchant_name"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/name"
             android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@+id/merchant_name"
+            app:layout_constraintEnd_toEndOf="@+id/name"
             app:layout_constraintHorizontal_bias="0.0"/>
     <ImageView
             android:layout_width="35dp"
@@ -42,7 +42,7 @@
             app:layout_constraintHorizontal_bias="0.859"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
-            app:layout_constraintTop_toBottomOf="@+id/merchant_name"/>
+            app:layout_constraintTop_toBottomOf="@+id/name"/>
     <TextView
             android:text="GO"
             android:textColor="#0054A6"
