--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -19,12 +19,13 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintVertical_bias="1.0">
 
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 tools:context=".MainActivity"
                 tools:layout_editor_absoluteY="-75dp"
                 tools:layout_editor_absoluteX="26dp">
@@ -33,7 +34,7 @@
                     android:visibility="gone"
                     app:cardCornerRadius="40dp"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="match_parent"
                     tools:ignore="MissingConstraints"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
@@ -45,29 +46,32 @@
 
                 <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                     <ImageView
+                            android:id="@+id/search_iv"
                             android:layout_margin="5dp"
                             android:src="@drawable/ic_search_black_24dp"
-                            android:layout_width="90dp"
+                            android:layout_width="50dp"
                             android:layout_height="46dp"
                             android:layout_weight="1"/>
 
-                    <TextView
-                            android:layout_margin="15dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                    <EditText
+                            android:id="@+id/search_et"
+                            android:layout_width="292dp"
+                            android:layout_height="40dp"
                             android:layout_weight="1"
-                            android:text="What do you need?"
-                            android:textColor="#665E5E"
-                            android:textSize="20sp"/>
+                            android:layout_marginTop="8dp"
+                            android:hint="What do you need?"
+                            android:layout_gravity="center"
+                            android:textColor="#665E5E"/>
 
                     <ImageView
+                            android:id="@+id/refresh"
                             android:layout_margin="5dp"
                             android:src="@drawable/ic_refresh_black_24dp"
-                            android:layout_width="90dp"
+                            android:layout_width="50dp"
                             android:layout_height="46dp"
                             android:layout_weight="1"/>
                 </LinearLayout>
@@ -84,8 +88,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="16dp"
                     app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginTop="32dp"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginTop="24dp"/>
 
             <TextView
                     android:text="KBZ"
