--- a/app/src/main/res/layout/details.xml
+++ b/app/src/main/res/layout/details.xml
@@ -73,12 +73,11 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/type_tv"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintHorizontal_bias="0.0"
                     android:layout_marginTop="28dp"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView"/>
+                    app:layout_constraintTop_toBottomOf="@+id/cardView" android:layout_marginStart="8dp"/>
             <TextView
                     android:text="SIN HPYU KYUN"
                     android:layout_width="wrap_content"
@@ -117,7 +116,7 @@
                     app:srcCompat="@drawable/ic_access_time_black_24dp"
                     android:id="@+id/imageView8"
                     app:layout_constraintStart_toStartOf="@+id/imageView7"
-                    app:layout_constraintTop_toBottomOf="@+id/address_tv" android:layout_marginTop="44dp"
+                    app:layout_constraintTop_toBottomOf="@+id/address_tv" android:layout_marginTop="43dp"
             />
             <TextView
                     android:text="24-Hour"
