--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,54 @@
                             android:layout_marginStart="8dp"/>
                 </android.support.constraint.ConstraintLayout>
             </HorizontalScrollView>
+            <android.support.v7.widget.CardView
+                    app:cardCornerRadius="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    tools:ignore="MissingConstraints"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/cardView">
 
+                <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                    <ImageView
+                            android:id="@+id/back_iv"
+                            android:src="@drawable/ic_search_black_24dp"
+                            android:layout_width="50dp"
+                            android:layout_height="30dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_weight="1"/>
+
+                    <TextView
+                            android:id="@+id/search"
+                            android:layout_width="292dp"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_weight="1"
+                            android:hint="What do you need?"
+                            android:textSize="20sp"
+                            android:layout_gravity="center"
+                            android:textColor="#665E5E"/>
+
+                    <ImageView
+                            android:id="@+id/refresh"
+                            android:src="@drawable/ic_refresh_black_24dp"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_weight="1"/>
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
         </android.support.constraint.ConstraintLayout>
 
     <include layout="@layout/bank_list"/>
