fetch nearest currency exchange details data from API

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -100,7 +100,7 @@
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/constraint2"
+                    android:id="@+id/exchange_constraintLayout"
                     android:background="@drawable/card_view_shape"
                     android:orientation="horizontal"
                     tools:ignore="MissingConstraints"
