--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -50,7 +50,7 @@
         <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/constraint2"
+                android:id="@+id/constraint"
                 android:background="@drawable/card_view_shape"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
