--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -151,7 +151,7 @@
             <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/constraint2"
+                    android:id="@+id/constraint"
                     android:background="@drawable/card_view_shape"
                     android:orientation="horizontal"
                     tools:ignore="MissingConstraints"
@@ -197,11 +197,11 @@
                     android:nestedScrollingEnabled="false"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="@+id/constraint2"
+                    app:layout_constraintEnd_toEndOf="@+id/constraint"
                     android:id="@+id/service_recycler"
-                    app:layout_constraintTop_toBottomOf="@+id/constraint2"
+                    app:layout_constraintTop_toBottomOf="@+id/constraint"
                     android:layout_marginTop="40dp"
-                    app:layout_constraintStart_toStartOf="@+id/constraint2" android:layout_marginStart="16dp"/>
+                    app:layout_constraintStart_toStartOf="@+id/constraint" android:layout_marginStart="16dp"/>
 
             <android.support.constraint.ConstraintLayout
                     android:background="@drawable/layout_shape"
